# gd-datamesh-tutorial

./: README.md
Data Mesh on GCP/: README.md
Part 1 — Build ETL Pipelines/: README.md  pyproject.toml
Part 1 — Build ETL Pipelines/src/gd_nasa_pipeline/bronze/: extract_data.py
Part 1 — Build ETL Pipelines/src/gd_nasa_pipeline/gold/: silver_to_gold.py
Part 1 — Build ETL Pipelines/src/gd_nasa_pipeline/silver/: transform_csv.py
Part 1 — Build ETL Pipelines/src/gd_nasa_pipeline/utils/: aws_handler.py  config.py  postgres_functions.py  postgres_handler.py
Part 1 — Build ETL Pipelines/tests/pipeline/: test_silver_layer.py
Part 2— Orchestrating a Data Pipeline/: README.md  pyproject.toml
Part 2— Orchestrating a Data Pipeline/src/gd_nasa_dag/dags/: weather_data_pipeline_dag.py
gd-nasa-api/: .dockerignore  .gitlab-ci.yml  .pre-commit-config.yaml  README.md  pyproject.toml
gd-nasa-api/src/gd_nasa_api/: main.py
gd-nasa-api/src/gd_nasa_api/apis/: PowerData.py  metadata.py
gd-nasa-api/src/gd_nasa_api/infra/: config.py  postgres_handler.py  powerData.py  session.py  weatherDataDomain.py
gd-nasa-api/src/gd_nasa_api/services/: dataService.py
gd-nasa-api/tests/: test_metadata.py
gd-nasa-dag/: .dockerignore  README.md  docker-compose.yaml
gd-nasa-dag/src/gd_nasa_dag/dags/: example_dag.py
gd-nasa-deployment/: .gitignore  .pre-commit-config.yaml  README.md  helper.yml
gd-nasa-deployment/environments/dev/foundation/: main.tf  output.tf  outputs.tf  provider.tf  variables.tf
gd-nasa-deployment/environments/dev/gd-nasa-api/: data.tf  main.tf  outputs.tf  provider.tf  terraform.tfvars  variables.tf
gd-nasa-deployment/modules/module_api_gateway/: main.tf  outputs.tf  variables.tf
gd-nasa-deployment/modules/module_api_gateway/specs/: api_meteo.yaml
gd-nasa-deployment/modules/module_cloud_run/: main.tf  outputs.tf  variables.tf
gd-nasa-pipeline/: .dockerignore  Dockerfile  README.md
gd-nasa-pipeline/src/gd_nasa_pipeline/: main.py
gd-nasa-pipeline/src/gd_nasa_pipeline/bronze/: extract_csv.py  extract_data.py
gd-nasa-pipeline/src/gd_nasa_pipeline/silver/: transform_data.py
gd-nasa-pipeline/src/gd_nasa_pipeline/utils/: aws_handler.py  postgres_handler.py
gd-nasa-pipeline/tests/pipeline/: test_aws_functions.py  test_bronze_layer.py  test_gold_layer.py  test_load_table.py  test_main.py  test_silver_layer.py
